RESOLVED FIXED316048
[JSC][Temporal] `Intl.DateTimeFormat` Temporal formatters lose requested field widths via pattern-skeleton round-trip
https://bugs.webkit.org/show_bug.cgi?id=316048
Summary [JSC][Temporal] `Intl.DateTimeFormat` Temporal formatters lose requested fiel...
Sosuke Suzuki
Reported 2026-06-01 18:44:17 PDT
...
Attachments
Sosuke Suzuki
Comment 1 2026-06-01 18:45:25 PDT
EWS
Comment 2 2026-06-06 15:27:14 PDT
Committed 314711@main (9cd3289437d5): <https://commits.webkit.org/314711@main> Reviewed commits have been landed. Closing PR #66218 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-06-06 15:28:11 PDT
Note You need to log in before you can comment on or make changes to this bug.